# lucubrum

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.test.yml  package-lock.json  render.yaml
.claude/: CLAUDE.md  settings.json
.claude/plans/: deep-waddling-map.md  phase3_plan.md  phase4_plan.md  velvety-herding-yeti.md
.claude/skills/curriculum-skill/: SKILL.md
apps/api-node/: .eslintrc.cjs  Dockerfile  jest.config.mjs  package-lock.json  package.json
apps/curriculum-python/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/curriculum-python/src/: main.py
apps/curriculum-python/src/api/: exam.py  exercises.py  facts.py  grade.py  llm_errors.py  normalize.py  plan.py  queries.py  reading_material.py  staleness.py  transcript.py  validate_video.py
apps/curriculum-python/src/mcp/: __init__.py  facts.py
apps/curriculum-python/src/middleware/: __init__.py  service_auth.py
apps/curriculum-python/src/models/: __init__.py  exam.py  exercise.py  grade.py  metadata.py  normalize.py  plan.py  query_suggestions.py  reading_material.py  transcript.py
apps/curriculum-python/src/prompts/exam/: v1.txt
apps/curriculum-python/src/prompts/exercises/: v1.txt
apps/curriculum-python/src/prompts/grade/: v1.txt
apps/curriculum-python/src/prompts/normalize/: v1.txt
apps/curriculum-python/src/prompts/plan/: v1.txt
apps/curriculum-python/src/prompts/queries/: v1.txt
apps/curriculum-python/src/prompts/reading_material/: v1.txt
apps/curriculum-python/src/prompts/staleness/: v1.txt
apps/curriculum-python/src/prompts/validate_video/: v1.txt  v2.txt
apps/curriculum-python/src/providers/: __init__.py  base.py  claude.py  gemini.py  zai.py
apps/curriculum-python/src/services/: __init__.py  staleness_policies.py
apps/curriculum-python/src/utils/: hashing.py  logger.py  prompts.py  retry.py  transcripts.py  web_search.py
apps/curriculum-python/tests/: conftest.py
apps/curriculum-python/tests/factories/: plan_factory.py
apps/curriculum-python/tests/fixtures/: llm_mocks.py  llm_responses.py
apps/curriculum-python/tests/unit/: test_example.py
apps/curriculum-python/tests/unit/api/: test_exam.py  test_exercises.py  test_grade.py  test_normalize.py  test_plan.py  test_queries.py  test_staleness.py  test_transcript.py  test_validate_video.py
apps/curriculum-python/tests/unit/middleware/: test_service_auth.py
apps/curriculum-python/tests/unit/models/: test_metadata.py  test_plan.py
apps/curriculum-python/tests/unit/providers/: test_base.py  test_claude.py  test_gemini.py  test_zai.py
apps/curriculum-python/tests/unit/utils/: test_hashing.py  test_retry.py  test_transcripts.py  test_web_search.py
apps/web/: .env.example  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
docs/: API.md  DEPLOYMENT.md  PROMPTS.md  SCHEMAS.md  SCRIPTS.md  SPEC.md  TIERS.md  implementation_roadmap.md  testing_impl_roadmap.md
eval/: __init__.py  base.py  prompt_experiments.md  run.py
eval/data/: golden_data.json  golden_topics.json
eval/evaluators/: __init__.py  exercises_eval.py  grade_eval.py  queries_eval.py  staleness_eval.py  validate_video_eval.py
eval/results/: exercises_20260129_090847.json  grade_20260129_091222.json  plan_20260129_090606.json  run_20260127_090535.json  run_20260128_151809.json  run_20260128_152424.json  run_20260128_162015.json
infra/: docker-compose.prod.yml  docker-compose.yml
infra/postgres/: init.sql
infra/scripts/: _lib.sh  cache-warm.sh  db-backup.sh  db-migrate.sh  db-prune.sh  health-check.sh  llm-report.sh  set-user-tier.py  staleness-reload.sh  user-admin.sh  warm-topics.txt
scripts/: generate-schemas.py
(+168 files in other folders)
