[tool.poetry]
name = "learning-helper-curriculum"
version = "0.1.0"
description = "Python/FastAPI Curriculum Service for Learning Helper"
readme = "README.md"
authors = ["Learning Helper Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = "^2.5.0"
httpx = "^0.26.0"
google-genai = "^1.0.0"
anthropic = "^0.8.0"
structlog = "^24.1.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
youtube-transcript-api = "^0.6.0"
fastmcp = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
